Add yaml and remove sodium
Adds yaml and removes sodium from the 7.2 and 7.3
Dockerfiles

references #12, #13

--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -49,7 +49,7 @@ RUN apt-get install -y \
   php7.3-mysql \
   php7.3-soap \
   php7.3-xml \
-  php-sodium
+  php7.3-yaml
 
 # Install composer
 RUN curl -sLS https://getcomposer.org/installer | \
