--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -50,6 +50,7 @@ RUN apt-get install -y \
   php7.1-mysql \
   php7.1-soap \
   php7.1-xml
+  php7.1-yaml
 
 # Install composer
 RUN curl -sLS https://getcomposer.org/installer | \
