Fix syntax error in 7.1 Dockerfile
hotfix

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -49,7 +49,7 @@ RUN apt-get install -y \
   php7.1-memcached \
   php7.1-mysql \
   php7.1-soap \
-  php7.1-xml
+  php7.1-xml \
   php7.1-yaml
 
 # Install composer
