OS upgrades dquote> dquote> Switch to Ubuntu 18.04LTS for php-7.2 & php-7.3. dquote> Create php-7.4 based on Ubuntu 20.04LTS. dquote> dquote> references #15

--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -13,6 +13,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # install some base packages
 RUN apt-get update && apt-get install -y \
+  clamav-daemon \
   curl \
   git \
   language-pack-en-base \
