--- a/7.4/Dockerfile.xdebug
+++ b/7.4/Dockerfile.xdebug
@@ -1,3 +1,3 @@
 FROM uazgraduatecollege/lamp-web:php-7.4
 
-RUN apt update && apt install php-xdebug && apt install vim
+RUN apt update && apt install php-xdebug -y && apt install vim -y
