Add php-pcov to 7.4 image
Package php-pcov provides support for composer package pcov/clobber,
which is being used as a dev dependency in Apply API and will likely
be used in other projects.

Closes #19

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -40,7 +40,8 @@ RUN apt-get update && apt-get install -y \
   php7.4-mysql \
   php7.4-soap \
   php7.4-xml \
-  php7.4-yaml
+  php7.4-yaml \
+  php-pcov
 
 # initialize the ClamAV db
 RUN /usr/bin/freshclam
