--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -40,8 +40,7 @@ RUN apt-get update && apt-get install -y \
   php7.4-mysql \
   php7.4-soap \
   php7.4-xml \
-  php7.4-yaml \
-  php-pcov
+  php7.4-yaml
 
 # initialize the ClamAV db
 RUN /usr/bin/freshclam
