--- a/8.1/Dockerfile
+++ b/8.1/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y \
   language-pack-en-base \
   memcached \
   mysql-client \
+  redis \
   software-properties-common \
   openssl \
   unzip \
